--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "morgan": "^1.9.1",
+    "mysql": "^2.17.1",
     "nodemon": "^1.19.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
